       - Add ability to show thumbnails in batch downloader tab when using gallery-dl.
       - It is now possible to start downloading while the playlist tab is getting filled with entries.
       - It is now possible to do simultaneous downloading from all three tabs that can do downloading.
       - It is now possible to send multiple urls to VLC for streaming. This is useful for example
         when you want to stream a media that is made up of a video only stream and an audio only stream.

     Version 5.4.2(August 1st, 2025)
     [ALL]
       - Maintanance release that fixes various issues.

     Version 5.4.3(October 1st, 2025)
     [WINDOWS]
       - Update ffmpeg to version 8.0.
     [ALL]
       - Add Ukranian translations.
       - Various fixes and improvements.

     Version 5.4.4(November 12th, 2025)
     [ALL]
       - Add support for autodownloading deno javascript runtime.

     Version 5.4.5(November 15th, 2025)
     [ALL]
       - Various fixes and improvements.
     [WINDOWS]
       - Default to quickjs javascript runtime on windows7 because deno does not work in windows7.
     [Flatpak]
       - Default to quickjs javascript runtime because deno crashes.
     [Linux and MacOS]
       - Default to bsdtar and fall back to unzip when unzipping .zip files.

     Version 5.4.6(November 17th, 2025)
     [ALL]
      - Update French translations.
      - Update Greek translations.
     [Flatpak]
      - Fix a bug that cause yt-dlp specific options to be set when using other engines.
     [Gallery-dl]
      - Fix a bug that caused downloaded files to be under "directlink" subfolder under certain circumstances.

     Version 5.4.7(January 13th, 2026)
     [ALL]
      - Maintanance Release.

     Version 5.4.8(January 21th, 2026)
     [ALL]
      - Update Chinese translations.
     [WINDOWS7]
      - Fix a bug that caused a wrong yt-dlp binary to be downloaded and used.

     Version 5.4.9(UNRELEASED)
     [ALL]
      - Do not auto update deno.