@@ -430,5 +430,7 @@ Version 1.2.0(April 1st, 2021)
       - Fix a bug that caused a wrong yt-dlp binary to be downloaded and used.
 
      Version 5.4.9(UNRELEASED)
+     [Flatpak]
+      - Start using deno runtime instead of quickjs.
      [ALL]
       - Do not auto update deno.
